# ESP32-for-IoT-Development

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  DHT22.c  DHT22.h  Kconfig.projbuild  aws_iot_core.c  aws_iot_core.h  http_server.c  http_server.h  main.c  mqtt_demo_mutual_auth.c  nvsImplement.c  nvsImplement.h  sntp_time_sync.c  sntp_time_sync.h  task_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/certs/: certificate_pem_crt  private_pem_key
main/webpage/: app.css  app.js  index.html
